<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000">

    <ImageButton
        android:id="@+id/botonbasura"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="664dp"
        android:backgroundTint="#00FFFEFE"
        android:contentDescription="@string/boton_basura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/outline_restore_from_trash_24"
        app:tint="#FF9800" />

    <EditText
        android:id="@+id/newnota"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="593dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/titulo_nota"
        android:textColor="#25FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonbasura" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="46dp"
        android:text="@string/fecha_nota"
        android:textColor="#FDFBFB"
        app:layout_constraintBottom_toTopOf="@+id/newnota"
        app:layout_constraintEnd_toStartOf="@+id/botonbasura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cuadrotexto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Empieza a escribir"
        android:inputType="textMultiLine"
        android:textColor="#FBFAFA"
        android:textColorHint="#1FF8F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newnota"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>